syntax = "proto3";

option java_multiple_files = true;
option java_package = "top.kwseeker.zk.protobuf";
option java_outer_classname = "GreetServiceProto";
option objc_class_prefix = "HLW";

package service;

service GreetService {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}